--- a/_includes/js/item-js.html
+++ b/_includes/js/item-js.html
@@ -22,27 +22,27 @@
         var objectLink = record.filename;
         var itemImage, itemLink;
         if (format.includes('image')) {
-            itemImage= '<div class="spotlight gallery-img" data-download="true" data-src="' + objectLink + '"><img class="img-fluid" src="' + objectLink + '" alt="' + objectTitle + '"><p><small>Click to view full screen</small></p></div>';
-            itemLink= '<a href="' + objectLink + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">Download Image</a>';
+            itemImage= '<div class="spotlight gallery-img" data-download="true" data-src="' + objectLink + '"><img class="img-fluid" src="' + objectLink + '" alt="' + objectTitle + '"><p><small>{% include translate.html id="item-view-full" default="Click to view full screen" %}</small></p></div>';
+            itemLink= '<a href="' + objectLink + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">{% include translate.html id="item-download-image" default="Download Image" %}</a>';
         } else if (format.includes('pdf')) {
-            itemImage= '<object aria-label="' + objectTitle + '" data="' + objectLink + '" type="application/pdf" width="100%" height="450px"><p>The PDF is not rendering in your browser. Please use the button below to download the PDF.</p></object>';
-            itemLink= '<a href="' + objectLink + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">Download PDF</a>';
+            itemImage= '<object aria-label="' + objectTitle + '" data="' + objectLink + '" type="application/pdf" width="100%" height="450px"><p>{% include translate.html id="item-pdf-render" default="The PDF is not rendering in your browser. Please use the button below to download the PDF." %}</p></object>';
+            itemLink= '<a href="' + objectLink + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">{% include translate.html id="item-download-pdf" default="Download PDF" %}</a>';
         } else if (format.includes('audio')) {
-            itemImage= '<audio controls class="w-100"><source src="' + objectLink + '">Your browser does not support the audio element.</audio>';
-            itemLink= '<a href="' + objectLink + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">Download Audio File</a>';
+            itemImage= '<audio controls class="w-100"><source src="' + objectLink + '">{% include translate.html id="item-audio-support" default="Your browser does not support the audio element." %}</audio>';
+            itemLink= '<a href="' + objectLink + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">{% include translate.html id="item-download-audio" default="Download Audio File" %}</a>';
         } else if (record.youtube) {
             itemImage= '<div class="ratio ratio-16x9"><iframe title="' + objectTitle + '" src="https://www.youtube-nocookie.com/embed/' + record.youtube + '?rel=0&modestbranding=1" allowfullscreen></iframe></div>';
-            itemLink= '<a href="https://youtu.be/' + record.youtube + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">View on YouTube</a>';
+            itemLink= '<a href="https://youtu.be/' + record.youtube + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">{% include translate.html id="item-download-youtube" default="View on YouTube" %}</a>';
         } else if (record.vimeo) {
             itemImage= '<div class="ratio ratio-16x9"><iframe title="' + objectTitle + '"src="https://player.vimeo.com/video/' + record.vimeo + '" allowfullscreen></iframe></div>';
-            itemLink= '<a href="https://vimeo.com/' + record.vimeo + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">View on Vimeo</a>';
+            itemLink= '<a href="https://vimeo.com/' + record.vimeo + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">{% include translate.html id="item-download-vimeo" default="View on Vimeo" %}</a>';
         } else if (format.includes('video')) {
-            itemImage= '<video controls class="w-100"><source src="' + objectLink + '">Your browser does not support the video element.</audio>';
-            itemLink= '<a href="' + objectLink + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">Download Video File</a>';
+            itemImage= '<video controls class="w-100"><source src="' + objectLink + '">{% include translate.html id="item-download-vimeo" default="Your browser does not support the video element." %}</audio>';
+            itemLink= '<a href="' + objectLink + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">{% include translate.html id="item-download-video" default="Download Video File" %}</a>';
         } else {
             /* fall back to no preview if it doesn't know the format */
             itemImage= '<img class="w-50" src="{{ "/assets/lib/icons/file-earmark.svg" | relative_url }}" alt="No preview found">';
-            itemLink= '<a href="' + objectLink + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">Download Object</a>';
+            itemLink= '<a href="' + objectLink + '" target="_blank" rel="noopener" class="m-2 btn btn-dark" title="Object download">{% include translate.html id="item-download-object" default="Download Object" %}</a>';
         }
 
         {% if stubs contains "timeline" %}
@@ -56,13 +56,13 @@
             } else {
                 itemYear = record.date;
             }
-            itemLink += '<a href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ "/timeline.html" | relative_url }}#y' + itemYear + '" class="m-2 btn btn-outline-dark">View on Timeline</a>';
+            itemLink += '<a href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ "/timeline.html" | relative_url }}#y' + itemYear + '" class="m-2 btn btn-outline-dark">{% include translate.html id="item-view-timeline" default="View on Timeline" %}</a>';
         }
         {%- endif -%}
         {% if stubs contains "map" %}
         /* add link to view on map */ 
         if (record.latitude && record.longitude) {
-            itemLink += '<a href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ '/map.html' | relative_url }}#' + record.latitude + ',' + record.longitude + '" class="m-2 btn btn-outline-dark">View on Map</a>';
+            itemLink += '<a href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ '/map.html' | relative_url }}#' + record.latitude + ',' + record.longitude + '" class="m-2 btn btn-outline-dark">{% include translate.html id="item-view-map" default="View on Map" %}</a>';
         }
         {%- endif -%}
 
@@ -108,8 +108,8 @@
         } else {
             forward = itemKeys[current + 1];
         }
-        var backUrl = "{{ '/item.html?id=' | relative_url }}" + back;
-        var forwardUrl = "{{ '/item.html?id=' | relative_url }}" + forward;
+        var backUrl = "{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ '/item.html?id=' | relative_url }}" + back;
+        var forwardUrl = "{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ '/item.html?id=' | relative_url }}" + forward;
         /* add side buttons to page */
         document.getElementById("back-button").href = backUrl;
         document.getElementById("next-button").href = forwardUrl;
@@ -133,7 +133,7 @@
     } else {
         /* no item with that ID */
         document.getElementById("bc-title").innerHTML = 'Not found?';
-        document.getElementById("item-title").innerHTML = 'Sorry, item not found. Please visit <a href="{{ "/browse.html" | relative_url }}">Browse page</a> to find an item.';
+        document.getElementById("item-title").innerHTML = 'Sorry, item not found. Please visit <a href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ "/browse.html" | relative_url }}">Browse page</a> to find an item.';
     }
 
     /* all done, so hide loading animation */
