--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -7,15 +7,15 @@ gallery: true
 
 <div class="container mt-2 mb-4">
     <ul class="breadcrumb h6">
-        <li class="breadcrumb-item"><a class="text-dark" href="{{ '/' | relative_url }}">{{ site.title }}</a></li>
-        <li class="breadcrumb-item"><a class="text-dark" href="{{ '/browse.html' | relative_url }}">Browse</a></li>
+        <li class="breadcrumb-item"><a class="text-dark" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ '/' | relative_url }}">{{ site.title }}</a></li>
+        <li class="breadcrumb-item"><a class="text-dark" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ '/browse.html' | relative_url }}">{% include translate.html id="item-breadcrumb-browse" default="Browse" %}</a></li>
         <li id="bc-title" class="breadcrumb-item active text-dark" aria-current="page"></li>
     </ul>
 
     <h2 id="item-title"></h2>
 
     <div id="loading" class="text-center">
-        <div class="spinner-border text-secondary" role="status"><span class="visually-hidden">Loading...</span></div>
+        <div class="spinner-border text-secondary" role="status"><span class="visually-hidden">{% include translate.html id="loading" default="Loading" %}...</span></div>
     </div>
 
     <div class="row mt-3">
@@ -34,9 +34,9 @@ gallery: true
 
     {%- if site.data.theme.browse-buttons == true -%}
     <div class="text-center">
-        <a id="prev-button" class="btn btn-secondary">&laquo; Previous</a>
-        <a class="btn btn-secondary" href="{{ '/browse.html' | relative_url }}">Back to browse</a>
-        <a id="for-button" class="btn btn-secondary">Next &raquo;</a>
+        <a id="prev-button" class="btn btn-secondary">&laquo; {% include translate.html id="item-previous" default="Previous" %}</a>
+        <a class="btn btn-secondary" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ '/browse.html' | relative_url }}">{% include translate.html id="back-to-browse" default="Back to browse" %}</a>
+        <a id="for-button" class="btn btn-secondary">{% include translate.html id="item-next" default="Next" %} &raquo;</a>
     </div>
 
     <div id="item-nav">
@@ -47,7 +47,7 @@ gallery: true
     </div>
     {% else %}
     <div class="text-center">
-        <a class="btn btn-outline-primary" href="{{ '/browse.html' | relative_url }}">&laquo; Back to Collection Browse</a>
+        <a class="btn btn-outline-primary" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ '/browse.html' | relative_url }}">&laquo; {% include translate.html id="back-to-collection-browse" default="Back to Collection Browse" %}</a>
     </div>
     {% endif %}
 </div>
