--- a/_includes/head/head.html
+++ b/_includes/head/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>{{ page.title | escape }} | {{ site.title | escape }}</title>
+<title>{{ page.title | escape }} | {% if page.lang == site.site_languages[0]['lang_id'] %}{{ site.title | escape }}{% else %}{% assign altLang = site.site_languages | where: "lang_id", page.lang | first %}{{ altLang.lang_site_title | escape }}{% endif %}</title>
 <link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
 <!--
   _____     ____        __  _           ___       _ __   __       
@@ -12,7 +12,7 @@
     https://github.com/CollectionBuilder/collectionbuilder-gh 
 -->
 <meta name="generator" content="collectionbuilder-gh" />
-<meta http-equiv="Content-Language" content="en-us" >
+<meta http-equiv="Content-Language" content="{{ page.lang }}-us" >
 
 <!-- load style sheets -->
 {% if site.data.theme.font-cdn %}{{ site.data.theme.font-cdn }}{% endif %}
