--- a/_includes/head/page-meta.html
+++ b/_includes/head/page-meta.html
@@ -1,21 +1,29 @@
+{%- assign altLang = site.site_languages | where: "lang_id", page.lang | first -%}
+{%- if page.lang == site.site_languages[0]['lang_id'] -%}
+{% capture siteTitle %}{{ site.title | escape }}{% endcapture %}
+{% capture siteDescription %}{{ site.description | escape }}{% endcapture %}
+{%- else -%}
+{% capture siteTitle %}{{ altLang.lang_site_title | escape }}{% endcapture %}
+{% capture siteDescription %}{{ altLang.lang_site_description | escape }}{% endcapture %}
+{%- endif -%}
 <meta name="description" content="{{ site.description | escape }}">
 {% if site.author or site.organization-name %}<meta name="author" content="{% if site.author %}{{ site.author | escape }}; {% endif %}{{ site.organization-name | escape }}" >{% endif %}
 <!-- DC meta --> 
 <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/" />
-<meta name="DCTERMS.title" content="{{ page.title | escape }}, {{ site.title | escape }}" xml:lang="en" />
-{% if site.author or site.organization-name %}<meta name="DCTERMS.creator" content="{{ site.author | default: site.organization-name | escape }}" xml:lang="en" />{% endif %}
-{% if site.organization-name %}<meta name="DCTERMS.publisher" content="{{ site.organization-name | escape }}" xml:lang="en" />{% endif %}
-<meta name="DCTERMS.date" content="{{ site.time | date: '%Y' }}" xml:lang="en" />
-<meta name="DCTERMS.description" content="{{ site.description | escape }}" xml:lang="en" />
+<meta name="DCTERMS.title" content="{{ page.title | escape }}, {{ siteTitle }}" xml:lang="{{ page.lang }}" />
+{% if site.author or site.organization-name %}<meta name="DCTERMS.creator" content="{{ site.author | default: site.organization-name | escape }}" xml:lang="{{ page.lang }}" />{% endif %}
+{% if site.organization-name %}<meta name="DCTERMS.publisher" content="{{ site.organization-name | escape }}" xml:lang="{{ page.lang }}" />{% endif %}
+<meta name="DCTERMS.date" content="{{ site.time | date: '%Y' }}" xml:lang="{{ page.lang }}" />
+<meta name="DCTERMS.description" content="{{ siteDescription }}" xml:lang="{{ page.lang }}" />
 
 <!-- Open Graph meta -->
-<meta property="og:title" content="{% if page.title %}{{ page.title | escape }}, {% endif %}{{ site.title | escape }}" />
-<meta property="og:description" content="{{ site.description | escape }}" />
-<meta property="og:site_name" content="{{ site.title | escape }}" />
+<meta property="og:title" content="{% if page.title %}{{ page.title | escape }}, {% endif %}{{ siteTitle }}" />
+<meta property="og:description" content="{{ siteDescription }}" />
+<meta property="og:site_name" content="{{ siteTitle }}" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="{% include image/featured-image.html %}" />
 <meta property="og:image:alt" content="{% unless site.data.theme.featured-image contains '/' %}{{ featuredItem.title | escape }}{% else %}CollectionBuilder logo{% endunless %}" />
 <meta property="og:url" content="{{ page.url | absolute_url }}" />
-<meta property="og:locale" content="en_US" />
+<meta property="og:locale" content="{{ page.lang }}_US" />
 <!-- schema.org JSON-LD -->
-<script type="application/ld+json">{"@context":"http://schema.org","@type":"WebPage","headline":"{% if page.title %}{{ page.title | escape }}, {% endif %}{{ site.title | escape }}","publisher":"{{ site.organization-name | default: site.author | escape }}","description":{{ site.description | jsonify }},"image":"{% include image/featured-image.html %}","url":"{{ page.url | absolute_url }}"}</script> 
+<script type="application/ld+json">{"@context":"http://schema.org","@type":"WebPage","headline":"{% if page.title %}{{ page.title | escape }}, {% endif %}{{ siteTitle }}","publisher":"{{ site.organization-name | default: site.author | escape }}","description":{{ siteDescription | jsonify }},"image":"{% include image/featured-image.html %}","url":"{{ page.url | absolute_url }}"}</script> 
