--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -11,7 +11,7 @@ custom-foot: js/lunr-js.html
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel">Lunr Search Options</h5>
+                <h5 class="modal-title" id="modalLabel">{% include translate.html id="search-lunr-options" default="Lunr Search Options" %}</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -43,6 +43,6 @@ custom-foot: js/lunr-js.html
 </div>
 
 <div class="mt-3">
-    <p class="text-muted">Fuzzy search powered by <a href="https://lunrjs.com/" target="_blank" rel="noopener">Lunr.js</a>. <em>May take a second to load large collections!</em></p>
-    {% if site.google-cse-id %}<p class="text-muted">Alternatively, try <a href="{{ '/search/google.html' | relative_url }}">Google CSE</a> site search.</p>{% endif %}
+    <p class="text-muted">{% include translate.html id="search-fuzzy" default="Fuzzy search powered by" %} <a href="https://lunrjs.com/" target="_blank" rel="noopener">Lunr.js</a>. <em>{% include translate.html id="search-load" default="May take a second to load large collections!" %}</em></p>
+    {% if site.google-cse-id %}<p class="text-muted">{% include translate.html id="search-google-cse" default="Alternatively, try" %} <a href="{{ '/search/google.html' | relative_url }}">Google CSE</a> {% include translate.html id="search-site-search" default="site search" %}.</p>{% endif %}
 </div>
